src/components/accordion/Accordion.module.scss
@import '../../utils/map-deep-get.scss';
@import '../../design-tokens/colors.scss';
@import '../../design-tokens/media.scss';
@import '../../design-tokens/typography.scss';

.fdAccordion {
    margin: 1rem 0;
    font-family: map-deep-get($typography, 'font-family', 'regular'), sans-serif;
    font-size: 1.0625rem;
    line-height: 1.529;
    @media screen and (min-width: map-deep-get($media, 'sizes', 's')) {
        font-size: 1.1875rem;
        line-height: 1.474;
    }
    @media screen and (min-width: map-deep-get($media, 'sizes', 'l')) {
        font-size: 1.3125rem;
        line-height: 1.429;
    }

    color: var(--content-copy);
    background-color: var(--card-2);
    // IE11
    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
        color: #{map-deep-get($colors, 'colors', 'neutrals', 10)};
        background-color: #{map-deep-get($colors, 'colors', 'neutrals', 80)};
    }
    box-shadow: 0 2px 0.2px rgba(0, 0, 0, 0.1);

    section {
        padding: 0.5rem 1rem;
        display: flex;
    }

    section:not(:last-child) {
        border-bottom: 1px solid var(--dividers);
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            border-bottom: 1px solid #{map-deep-get(
                    $colors,
                    'colors',
                    'neutrals',
                    50
                )};
        }
    }

    h2 {
        user-select: none;
        cursor: pointer;
        margin: 0;
        font-weight: normal;
        font-family: map-deep-get($typography, 'font-family', 'regular'),
            sans-serif;

        font-size: 1.0625rem;
        line-height: 1.529;
        @media screen and (min-width: map-deep-get($media, 'sizes', 's')) {
            font-size: 1.1875rem;
            line-height: 1.474;
        }
        @media screen and (min-width: map-deep-get($media, 'sizes', 'l')) {
            font-size: 1.3125rem;
            line-height: 1.429;
        }
    }

    a {
        color: var(--link);
        text-decoration: none;
        &:hover {
            color: var(--link-hover);
            text-decoration: underline;
        }
        // IE11
        @media screen and (-ms-high-contrast: active),
            (-ms-high-contrast: none) {
            color: #{map-deep-get($colors, 'colors', 'primary', 75)};
            &:hover {
                color: #{map-deep-get($colors, 'colors', 'primary', 50)};
            }
        }
    }

    input {
        display: none;
    }

    .textContent > div {
        display: none;
        margin: 0;
        box-sizing: border-box;
        * {
            pointer-events: none;
            margin: 0;
        }
    }
    input:checked ~ .textContent > div {
        display: block;
        * {
            pointer-events: all;
        }
    }

    input:checked ~ .textContent label h2 {
        font-family: map-deep-get($typography, 'font-family', 'bold'),
            sans-serif;
    }

    .icon {
        user-select: none;
        cursor: pointer;
        margin-right: 1rem;
        display: flex;
        align-items: center;
        svg {
            fill: var(--primary) !important;
            // IE11
            @media screen and (-ms-high-contrast: active),
                (-ms-high-contrast: none) {
                fill: #{map-deep-get($colors, 'colors', 'primary', 75)} !important;
            }
            * {
                fill: var(--primary) !important;
                // IE11
                @media screen and (-ms-high-contrast: active),
                    (-ms-high-contrast: none) {
                    fill: #{map-deep-get($colors, 'colors', 'primary', 75)} !important;
                }
            }
        }
    }

    .minimise {
        display: none;
    }
    input:checked ~ .icon {
        &.minimise {
            display: block;
        }
        &.expand {
            display: none;
        }
    }
}

